# fr-arb

./: Cargo.toml
data/: tokens.txt
examples/: rust_num.rs
src/: balance.rs  cli_types.rs  command_handler.rs  constants.rs  funding_history.rs  funding_history_table.rs  main.rs  orderbook.rs  quote.rs  token_price.rs
src/balances/: global_balance.rs  mod.rs  open_positions.rs
src/binance/: account_information.rs  b_orderbook.rs  binance_funding_rate.rs  execute_mkt_order.rs  funding_history.rs  funding_info.rs  funding_intervals.rs  funding_payments.rs  funding_rate.rs  funding_rates.rs  general_info.rs  get_order.rs  leverage.rs  mod.rs  open_interest.rs  orderbook.rs  parse_symbol.rs  raw_funding_rate.rs  step_size.rs  tokens.rs
src/compare_funding_rates/: compare_funding_rate.rs  funding_rate_table.rs  mod.rs
src/hyperliquid/: account_information.rs  execute_mkt_order.rs  funding.rs  funding_history.rs  funding_rates.rs  get_wallet.rs  hl_orderbook.rs  hyperliquid_funding_rate.rs  mod.rs  orderbook.rs
src/util/: bid_ask.rs  effective_funding_rate.rs  format_token.rs  hmac_signature.rs  limit_order.rs  math.rs  mod.rs  order_filled.rs  platform.rs
