[package]
name = "funding-rate-arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
hyperliquid_rust_sdk = "0.5.0"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
rustyline-async = "0.4.3"
serde = { version = "1.0.209", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.127"
sha2 = "0.10.8"
tokio = { version = "1.39.3", features = ["full"] }
